backend/.cicd/kube/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: sws-backend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 4000
  selector:
    app: sws-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sws-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sws-backend
  template:
    metadata:
      labels:
        app: sws-backend
    spec:
      containers:
      - name: nodejs
        image: registry.digitalocean.com/vmoriyuki/sws-backend:latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 4000
