backend/.cicd/kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  namespace: default
  # labels:
  #   app: nextgen-sample-app
  #   tier: backend
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: sws-backend.victorkurauchi.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sws-backend
                port:
                  number: 80
